@@ -41,13 +41,15 @@ import edu.wpi.first.networktables.NetworkTable;
 import edu.wpi.first.networktables.NetworkTableInstance;
 import edu.wpi.first.networktables.PubSubOption;
 import edu.wpi.first.networktables.StringSubscriber;
+import edu.wpi.first.wpilibj.Alert;
+import edu.wpi.first.wpilibj.Alert.AlertType;
 import edu.wpi.first.wpilibj.DriverStation;
 import edu.wpi.first.wpilibj.Timer;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import org.opencv.core.Core;
 import org.photonvision.common.hardware.VisionLEDMode;
 import org.photonvision.common.networktables.PacketSubscriber;
 import org.photonvision.targeting.PhotonPipelineResult;
@@ -55,18 +57,21 @@ import org.photonvision.timesync.TimeSyncSingleton;
 
 /** Represents a camera that is connected to PhotonVision. */
 public class PhotonCamera implements AutoCloseable {
-    private static int InstanceCount = 0;
+    private static int InstanceCount = 1;
     public static final String kTableName = "photonvision";
+    private static final String PHOTON_ALERT_GROUP = "PhotonAlerts";
 
     private final NetworkTable cameraTable;
     PacketSubscriber<PhotonPipelineResult> resultSubscriber;
     BooleanPublisher driverModePublisher;
     BooleanSubscriber driverModeSubscriber;
+    IntegerPublisher fpsLimitPublisher;
+    IntegerSubscriber fpsLimitSubscriber;
     StringSubscriber versionEntry;
     IntegerEntry inputSaveImgEntry, outputSaveImgEntry;
     IntegerPublisher pipelineIndexRequest, ledModeRequest;
     IntegerSubscriber pipelineIndexState, ledModeState;
-    IntegerSubscriber heartbeatEntry;
+    IntegerSubscriber heartbeatSubscriber;
     DoubleArraySubscriber cameraIntrinsicsSubscriber;
     DoubleArraySubscriber cameraDistortionSubscriber;
     MultiSubscriber topicNameSubscriber;
@@ -77,6 +82,8 @@ public class PhotonCamera implements AutoCloseable {
         resultSubscriber.close();
         driverModePublisher.close();
         driverModeSubscriber.close();
+        fpsLimitPublisher.close();
+        fpsLimitSubscriber.close();
         versionEntry.close();
         inputSaveImgEntry.close();
         outputSaveImgEntry.close();
@@ -104,6 +111,17 @@ public class PhotonCamera implements AutoCloseable {
     double prevTimeSyncWarnTime = 0;
     private static final double WARN_DEBOUNCE_SEC = 5;
 
+    private final Alert disconnectAlert;
+    private final Alert timesyncAlert;
+
+    /**
+     * Sets whether or not coprocessor version checks will occur. Setting this to true will silence
+     * all console warnings about coproccessor connection, so be careful when enabling this and ensure
+     * all your coprocessors are communicating to the robot properly and everything has matching
+     * versions.
+     *
+     * @param enabled Whether or not to enable coprocessor version checks
+     */
     public static void setVersionCheckEnabled(boolean enabled) {
         VERSION_CHECK_ENABLED = enabled;
     }
@@ -118,6 +136,10 @@ public class PhotonCamera implements AutoCloseable {
      */
     public PhotonCamera(NetworkTableInstance instance, String cameraName) {
         name = cameraName;
+        disconnectAlert =
+                new Alert(
+                        PHOTON_ALERT_GROUP, "PhotonCamera '" + name + "' is disconnected.", AlertType.kWarning);
+        timesyncAlert = new Alert(PHOTON_ALERT_GROUP, "", AlertType.kWarning);
         rootPhotonTable = instance.getTable(kTableName);
         this.cameraTable = rootPhotonTable.getSubTable(cameraName);
         path = cameraTable.getPath();
@@ -126,18 +148,20 @@ public class PhotonCamera implements AutoCloseable {
                         .getRawTopic("rawBytes")
                         .subscribe(
                                 PhotonPipelineResult.photonStruct.getTypeString(),
-                                new byte[] {},
+                                new byte[0],
                                 PubSubOption.periodic(0.01),
                                 PubSubOption.sendAll(true),
                                 PubSubOption.pollStorage(20));
         resultSubscriber = new PacketSubscriber<>(rawBytesEntry, PhotonPipelineResult.photonStruct);
         driverModePublisher = cameraTable.getBooleanTopic("driverModeRequest").publish();
         driverModeSubscriber = cameraTable.getBooleanTopic("driverMode").subscribe(false);
+        fpsLimitPublisher = cameraTable.getIntegerTopic("fpsLimitRequest").publish();
+        fpsLimitSubscriber = cameraTable.getIntegerTopic("fpsLimit").subscribe(-1);
         inputSaveImgEntry = cameraTable.getIntegerTopic("inputSaveImgCmd").getEntry(0);
         outputSaveImgEntry = cameraTable.getIntegerTopic("outputSaveImgCmd").getEntry(0);
         pipelineIndexRequest = cameraTable.getIntegerTopic("pipelineIndexRequest").publish();
         pipelineIndexState = cameraTable.getIntegerTopic("pipelineIndexState").subscribe(0);
-        heartbeatEntry = cameraTable.getIntegerTopic("heartbeat").subscribe(-1);
+        heartbeatSubscriber = cameraTable.getIntegerTopic("heartbeat").subscribe(-1);
         cameraIntrinsicsSubscriber =
                 cameraTable.getDoubleArrayTopic("cameraIntrinsics").subscribe(null);
         cameraDistortionSubscriber =
@@ -157,6 +181,58 @@ public class PhotonCamera implements AutoCloseable {
 
         // HACK - start a TimeSyncServer, if we haven't yet.
         TimeSyncSingleton.load();
+
+        // HACK - check if things are compatible
+        verifyDependencies();
+    }
+
+    static void verifyDependencies() {
+        // spotless:off
+        if (!Core.VERSION.equals(PhotonVersion.opencvTargetVersion)) {
+            String bfw = """
+
+
+
+
+                    >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\s
+                    >>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\s
+                    >>>                                          \s
+                    >>> You are running an incompatible version  \s
+                    >>> of PhotonVision !                        \s
+                    >>>                                          \s
+                    >>> PhotonLib """
+                    + PhotonVersion.versionString
+                    + " is built for OpenCV "
+                    + PhotonVersion.opencvTargetVersion
+                    + "\n"
+                    + ">>> but you are using OpenCV "
+                    + Core.VERSION
+                    + """
+                    \n>>>                                          \s
+                    >>> This is neither tested nor supported.    \s
+                    >>> You MUST update WPILib, PhotonLib, or both.
+                    >>> Check `./gradlew dependencies` and ensure\s
+                    >>> all mentions of OpenCV match the version \s
+                    >>> that PhotonLib was built for. If you find a
+                    >>> a mismatched version in a dependency, you\s
+                    >>> must take steps to update the version of \s
+                    >>> OpenCV used in that dependency. If you do\s
+                    >>> not control that dependency and an updated\s
+                    >>> version is not available, contact the    \s
+                    >>> developers of that dependency.           \s
+                    >>>                                          \s
+                    >>> Your code will now crash.                \s
+                    >>> We hope your day gets better.            \s
+                    >>>                                          \s
+                    >>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\s
+                    >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\s
+                    """;
+            // spotless:on
+
+            DriverStation.reportWarning(bfw, false);
+            DriverStation.reportError(bfw, false);
+            throw new UnsupportedOperationException(bfw);
+        }
     }
 
     /**
@@ -174,15 +250,17 @@ public class PhotonCamera implements AutoCloseable {
      * getAllUnreadResults() will return different (potentially empty) result arrays. Be careful to
      * call this exactly ONCE per loop of your robot code! FIFO depth is limited to 20 changes, so
      * make sure to call this frequently enough to avoid old results being discarded, too!
+     *
+     * @return The list of pipeline results
      */
     public List<PhotonPipelineResult> getAllUnreadResults() {
         verifyVersion();
-
-        List<PhotonPipelineResult> ret = new ArrayList<>();
+        updateDisconnectAlert();
 
         // Grab the latest results. We don't care about the timestamps from NT - the metadata header has
         // this, latency compensated by the Time Sync Client
         var changes = resultSubscriber.getAllChanges();
+        List<PhotonPipelineResult> ret = new ArrayList<>(changes.size());
         for (var c : changes) {
             var result = c.value;
             checkTimeSyncOrWarn(result);
@@ -198,10 +276,13 @@ public class PhotonCamera implements AutoCloseable {
      *
      * <p>Replaced by {@link #getAllUnreadResults()} over getLatestResult, as this function can miss
      * results, or provide duplicate ones!
+     *
+     * @return The latest pipeline result
      */
     @Deprecated(since = "2024", forRemoval = true)
     public PhotonPipelineResult getLatestResult() {
         verifyVersion();
+        updateDisconnectAlert();
 
         // Grab the latest result. We don't care about the timestamp from NT - the metadata header has
         // this, latency compensated by the Time Sync Client
@@ -216,22 +297,34 @@ public class PhotonCamera implements AutoCloseable {
         return result;
     }
 
+    private void updateDisconnectAlert() {
+        disconnectAlert.set(!isConnected());
+    }
+
     private void checkTimeSyncOrWarn(PhotonPipelineResult result) {
         if (result.metadata.timeSinceLastPong > 5L * 1000000L) {
+            String warningText =
+                    "PhotonVision coprocessor at path "
+                            + path
+                            + " is not connected to the TimeSyncServer? It's been "
+                            + String.format("%.2f", result.metadata.timeSinceLastPong / 1e6)
+                            + "s since the coprocessor last heard a pong.";
+
+            timesyncAlert.setText(warningText);
+            timesyncAlert.set(true);
+
             if (Timer.getFPGATimestamp() > (prevTimeSyncWarnTime + WARN_DEBOUNCE_SEC)) {
                 prevTimeSyncWarnTime = Timer.getFPGATimestamp();
 
                 DriverStation.reportWarning(
-                        "PhotonVision coprocessor at path "
-                                + path
-                                + " is not connected to the TimeSyncServer? It's been "
-                                + String.format("%.2f", result.metadata.timeSinceLastPong / 1e6)
-                                + "s since the coprocessor last heard a pong.\n\nCheck /photonvision/.timesync/{COPROCESSOR_HOSTNAME} for more information.",
+                        warningText
+                                + "\n\nCheck /photonvision/.timesync/{COPROCESSOR_HOSTNAME} for more information.",
                         false);
             }
         } else {
             // Got a valid packet, reset the last time
             prevTimeSyncWarnTime = 0;
+            timesyncAlert.set(false);
         }
     }
 
@@ -251,6 +344,24 @@ public class PhotonCamera implements AutoCloseable {
      */
     public void setDriverMode(boolean driverMode) {
         driverModePublisher.set(driverMode);
+    }
+
+    /**
+     * Gets the FPS limit set on the camera.
+     *
+     * @return The current FPS limit.
+     */
+    public int getFPSLimit() {
+        return (int) fpsLimitSubscriber.get();
+    }
+
+    /**
+     * Sets the FPS limit on the camera.
+     *
+     * @param fps The FPS limit to set. Set to -1 for unlimited FPS.
+     */
+    public void setFPSLimit(int fps) {
+        fpsLimitPublisher.set(fps);
     }
 
     /**
@@ -332,8 +443,13 @@ public class PhotonCamera implements AutoCloseable {
      * @return True if the camera is actively sending frame data, false otherwise.
      */
     public boolean isConnected() {
-        var curHeartbeat = heartbeatEntry.get();
+        var curHeartbeat = heartbeatSubscriber.get();
         var now = Timer.getFPGATimestamp();
+
+        if (curHeartbeat < 0) {
+            // we have never heard from the camera
+            return false;
+        }
 
         if (curHeartbeat != prevHeartbeatValue) {
             // New heartbeat value from the coprocessor
@@ -352,8 +468,11 @@ public class PhotonCamera implements AutoCloseable {
     }
 
     /**
-     * The camera calibration's distortion coefficients, in OPENCV8 form. Higher-order terms are set
-     * to 0
+     * Returns the camera calibration's distortion coefficients, in OPENCV8 form. Higher-order terms
+     * are set to 0
+     *
+     * @return The distortion coefficients in a 8x1 matrix, if they are published by the camera. Empty
+     *     otherwise.
      */
     public Optional<Matrix<N8, N1>> getDistCoeffs() {
         var distCoeffs = cameraDistortionSubscriber.get();
@@ -383,7 +502,7 @@ public class PhotonCamera implements AutoCloseable {
 
         // Heartbeat entry is assumed to always be present. If it's not present, we
         // assume that a camera with that name was never connected in the first place.
-        if (!heartbeatEntry.exists()) {
+        if (!heartbeatSubscriber.exists()) {
             var cameraNames = getTablesThatLookLikePhotonCameras();
             if (cameraNames.isEmpty()) {
                 DriverStation.reportError(
@@ -432,23 +551,30 @@ public class PhotonCamera implements AutoCloseable {
             // Error on a verified version mismatch
             // But stay silent otherwise
 
-            String bfw =
-                    "\n\n\n\n\n"
-                            + ">>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n"
-                            + ">>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n"
-                            + ">>>                                          \n"
-                            + ">>> You are running an incompatible version  \n"
-                            + ">>> of PhotonVision on your coprocessor!     \n"
-                            + ">>>                                          \n"
-                            + ">>> This is neither tested nor supported.    \n"
-                            + ">>> You MUST update PhotonVision,            \n"
-                            + ">>> PhotonLib, or both.                      \n"
-                            + ">>>                                          \n"
-                            + ">>> Your code will now crash.                \n"
-                            + ">>> We hope your day gets better.            \n"
-                            + ">>>                                          \n"
-                            + ">>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!\n"
-                            + ">>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n";
+            // spotless:off
+            String bfw = """
+
+
+
+
+
+                    >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+                    >>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+                    >>>                                         \s
+                    >>> You are running an incompatible version \s
+                    >>> of PhotonVision on your coprocessor!    \s
+                    >>>                                         \s
+                    >>> This is neither tested nor supported.   \s
+                    >>> You MUST update PhotonVision,           \s
+                    >>> PhotonLib, or both.                     \s
+                    >>>                                         \s
+                    >>> Your code will now crash.               \s
+                    >>> We hope your day gets better.           \s
+                    >>>                                         \s
+                    >>> !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+                    >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+                    """;
+            // spotless:on
 
             DriverStation.reportWarning(bfw, false);
             var versionMismatchMessage =
@@ -474,6 +600,6 @@ public class PhotonCamera implements AutoCloseable {
                         it -> {
                             return rootPhotonTable.getSubTable(it).getEntry("rawBytes").exists();
                         })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
